# carsier

./: .gitignore  Cargo.toml  README.md
configs/: repo.toml
demo/: Carsier.toml
demo/src/: a.scala  b.scala  lib.scala  main.scala
moduleplugin/: .gitignore  Carsier.toml  README.md  scalac-plugin.xml
moduleplugin/src/: lib.scala
src/: build.rs  config.rs  init.rs  main.rs  preprocess.rs  resolve.rs  utils.rs
src/config/: constant.rs  repo.rs  version.rs
