[package]
name = "carsier"
version = "0.1.0"
authors = ["Clouds Flowing <clouds.flowing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
simplelog = "*"
failure = "*"
clap = { git = "https://github.com/clap-rs/clap" } # for 3.0.0-beta.1
toml = "*"
semver-parser = "*"
serde = { version = "*", features = ["derive"] }
